# gtk-opencv-simple

./: .gitignore  .vimrc  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Info.plist  camera-drawing-area.cpp  camera-drawing-area.hpp  main-window.cpp  main-window.hpp  main.cpp
src/cpp/: camera-drawing-area.cpp  main-window.cpp  main.cpp
src/hpp/: camera-drawing-area.hpp  main-window.hpp
src/lib/: CMakeLists.txt
src/lib/test/: any-test.cpp
src/res/: Info.plist  MacOSXBundleInfo.plist.in
